# rinha-2026-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  info.json
src/: http.rs  ivf.rs  json.rs  lib.rs  main.rs  normalize.rs  response.rs  server.rs  specialist.rs
tools/: README.md  build_index.py  normalize.py  preprocess.py  verify_knn.py
