[package]
name = "rinha2026"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rinha2026"
path = "src/lib.rs"

[[bin]]
name = "rinha2026"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "lb"
path = "src/bin/lb.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"
required-features = ["build-index"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[features]
# build-index pulls in flate2 + serde_json only for the offline preprocess
# binary, so the runtime image stays slim.
build-index = ["flate2", "serde_json"]

[dependencies]
libc = "0.2"
mimalloc = { version = "0.1", default-features = false }
flate2 = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
